# trajectory-optimizer-torch

./: .gitignore  PROJECT.md  config.py  losses.py  model.py  pyproject.toml  runner.py  todo.md  training_logging.py  trajectory_initializers.py  utils.py
configs/examples/: curve_band.yaml  curve_band_lbfgs.yaml  single_plane.yaml  single_plane_lbfgs.yaml
scripts/: launch_tensorboard.sh
trajectory_optimizer_torch/: __init__.py  config.py  reporting.py  runner.py  targets.py  trajectory_initializers.py
